kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-matchmaking-frontend
  labels:
    name: sport-matchmaking-frontend
    app: sport-matchmaking
spec:
  selector:
    matchLabels:
      name: sport-matchmaking-frontend
      app: sport-matchmaking
  template:
    metadata:
      labels:
        name: sport-matchmaking-frontend
        app: sport-matchmaking
    spec:
      automountServiceAccountToken: false
      containers:
        - name: sport-matchmaking-frontend
          image: sport-matchmaking-frontend:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
              ephemeral-storage: "128Mi"
            limits:
              memory: "256Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
          ports:
            - containerPort: 3000
