kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sport-matchmaking-frontend
  labels:
    name: sport-matchmaking-frontend
    app: sport-matchmaking
spec:
  selector:
    name: sport-matchmaking-frontend
    app: sport-matchmaking
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
