kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sport-matchmaking-frontend
spec:
  rules:
    # - host: <Host>
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sport-matchmaking-frontend
                port:
                  number: 3000
